--- a/Web Scraping with Python.ipynb
+++ b/Web Scraping with Python.ipynb
@@ -7220,7 +7220,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(r'C:\\Users\\alexf\\OneDrive\\Documents\\Python Web Scraping\\Folder for Output\\Companies.csv', index = False)"
+    "df.to_csv(r'C:\Users\Twelany\Documents\Projects\Companies.csv', index = False)"
    ]
   },
   {
